# srrs

./: .coverage  .gitignore  LICENSE  Makefile  PlaceProcessed.html  README.md  deterministic-scenarios.csv  pyproject.toml  requirements.txt  srrs-old.ipynb  srrs.ipynb  srrs.py  srrs_det.ipynb  srrs_test.ipynb  srrs_updated_version.ipynb
.github/workflows/: ci.yml
.ipynb_checkpoints/: cho-Copy1-checkpoint.ipynb  srrs-Copy1-v1-checkpoint.ipynb  srrs-checkpoint.ipynb  srrs_det-checkpoint.ipynb  srrs_updated_version-checkpoint.ipynb
Deterministic_Mode/: Deterministic-Scenarios-TestCases.csv
Deterministic_Mode/CHE/: Determinisitic_CHE_time_250_risk_0.5_numTaskBeforeFail_2.csv  graph_AvgBuildQuality_Determinisitic_CHE_time_250_risk_0.5_numTaskBeforeFail_2.html  graph_InOutServiceRobots_Determinisitic_CHE_time_250_risk_0.5_numTaskBeforeFail_2.html  graph_Resources_Determinisitic_CHE_time_250_risk_0.5_numTaskBeforeFail_2.html  graph_RobotTasks_Determinisitic_CHE_time_250_risk_0.5_numTaskBeforeFail_2.html  (+1 more)
MC_Mode/: MC-Scenarios-TestCases-ConfidenceIntervals.csv  MC-Scenarios-TestCases-Mean.csv  MC-Scenarios-TestCases-StdDev.csv
docker/: Dockerfile
output/: CHE - Characteristics.html  CHE - Habitat over time.html  CHO - Characteristics.html  CHO - Habitat over time.html  DHE - Characteristics.html  DHE - Habitat over time.html  DHO - Characteristics.html  DHO - Habitat over time.html  HHE - Characteristics.html  HHE - Habitat over time.html  HHO - Characteristics.html  HHO - Habitat over time.html
python/: main.py
python/analysis/: ram.py
tests/: conftest.py  test_CHE.py  test_CHO.py  test_DHE.py  test_DHO.py  test_HHE.py  test_HHO.py
(+55 files in other folders)
