[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "srrs"
version = "0.1.0"
description = "Self-Replicating Robot System simulation with RAM analysis"
authors = [{ name = "Vishal Gattani", email = "vishalgattani09@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "pydantic>=2.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
srrs = "python.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["python"]
omit = ["tests/*"]
